--- a/views/_layouts/adminHeader.ejs
+++ b/views/_layouts/adminHeader.ejs
@@ -9,15 +9,15 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/" target="_blank">Shopping-Cart CMS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/pages"> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -45,3 +45,13 @@
   </nav>
 
   <div class="container">
+    <br>
+    <%-messages('messages',locals) %>
+    <% if(errors){ %>
+      <% errors.forEach(err=>{ %>
+      <div class="alert alert-danger">
+        <%= err.msg %>
+      </div>
+      <% });%>
+    <% }%>
+    <br>
