--- a/views/admin/add_page.ejs
+++ b/views/admin/add_page.ejs
@@ -1,6 +1,6 @@
 <%- include('../_layouts/adminHeader') %>
   <h2 class="page-title">Add a page</h2>
-  <a href="../admin/pages" class="btn btn-primary">Back to all pages</a>
+  <a href="/admin/pages" class="btn btn-primary">Back to all pages</a>
   <br><br>
   <form action="/admin/pages/add-page" method="POST">
     <div class="form-group">
