--- a/views/admin/pages.ejs
+++ b/views/admin/pages.ejs
@@ -2,9 +2,9 @@
   <h2 class="page-title">Pages</h2>
   <a href="../admin/pages/add-page" class="btn btn-primary">Add a new page</a>
   <br><br>
-  <table class="table table-striped">
+  <table class="table table-striped sorting">
     <thead>
-      <tr>
+      <tr class="home">
         <th>Title</th>
         <th>Edit</th>
         <th>Delete</th>
@@ -12,7 +12,7 @@
     </thead>
     <tbody>
       <%  pages.forEach(page=>{ %>
-        <tr>
+        <tr id="id_<%= page._id %>" class="<%= page.slug %>">
           <td><%=page.title%></td>
           <td><a href="/admin/pages/edit-page/<%=page.slug%>">Edit</a></td>
           <% if(page.slug=='home'){ %>
@@ -25,4 +25,17 @@
       <%});%>
     </tbody>
   </table>
+
+<script>
+  $('tbody').sortable({
+    items:"tr:not('.home')",
+    placeholder:"ui-state-highlight",
+    update:function(){
+      var ids=$('tbody').sortable('serialize');
+      var url="/admin/pages/reorder-pages";
+      $.post(url,ids);
+    }
+  });
+</script>
+
 <%- include('../_layouts/adminFooter') %>
