--- a/views/_layouts/adminHeader.ejs
+++ b/views/_layouts/adminHeader.ejs
@@ -22,6 +22,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/admin/pages">Pages</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/categories">Categories</a>
+        </li>
       </ul>
     </div>
   </nav>
