--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -14,3 +14,17 @@ sorting tr:not(.home){
   width: 100px;
   height: 100px;
 }
+
+ul.gallery{
+  padding:0;
+}
+
+ul.gallery li:first-child{
+  margin-left: 0;
+}
+
+ul.gallery li{
+  margin:20px;
+  display:inline-block;
+  list-style: none;
+}
