--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="/css/style.css">
   <title><%=title%></title>
 </head>
@@ -34,3 +35,23 @@
 
 <div class="container">
     <%- messages('messages', locals) %>
+    
+    <div class="row category">
+      <div class="col-xs-12 col-md-3">
+        <h3>Categories</h3>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <a href="/products">All products</a>
+          </li>
+          <%categories.forEach(c=>{%>
+            <li class="list-group-item">
+              <a href="/products/<%=c.slug%>"><%=c.title%></a>
+            </li>
+          <%});%>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-md-1">
+
+      </div>
+      <div class="col-xs-12 col-md-8">
+
