--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,3 +30,12 @@ ul.gallery li{
   margin: 20px;
   list-style: none;
 }
+
+img.cpi{
+  width:100px;
+  height: 100px;
+}
+
+table.alignmiddle td{
+  vertical-align: middle !important;
+}
