--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -3,7 +3,7 @@
   <a href="../admin/products/add-product" class="btn btn-primary">Add a new product</a>
   <br><br>
   <%if(Object.keys(products).length>0){%>
-  <table class="table table-striped">
+  <table class="table table-striped alignmiddle">
     <thead>
       <tr class="home">
         <th>Product</th>
