modified checkout page
added redirect page on buy now

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -52,6 +52,9 @@
         if(!confirm('Confirm clear cart'))
          return false;
         });
+      $('a.buynow').on('click',function(e){
+       $('.ajaxbg').show();
+      });
     });
   </script>
 
