--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -11,6 +11,14 @@
   <title><%=title%></title>
 </head>
 <body>
+
+  <div class="ajaxbg">
+    <div class="ajaxinner">
+      <h2>You are now being redirected to payment page...</h2>
+      <img src="/images/loader.gif" alt="">
+    </div>
+  </div>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Shopping-cart</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
