--- a/views/_layouts/adminHeader.ejs
+++ b/views/_layouts/adminHeader.ejs
@@ -29,6 +29,13 @@
           <a class="nav-link" href="/admin/products">Products</a>
         </li>
       </ul>
+      <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+              <a href="/users/logout" class="nav-link">
+                Hi, <%=user.username%> (Logout) <i class="fa fa-sign-out-alt"></i>
+              </a>
+          </li>
+      </ul>
     </div>
   </nav>
 
