--- a/views/product.ejs
+++ b/views/product.ejs
@@ -23,7 +23,11 @@
     <div class="col-xs-12 col-md-7">
       <p><%=p.desc%></p>
       <p>Rs.<%=parseFloat(p.price).toFixed(2)%></p>
-      <p><a href="/cart/add/<%=p.slug%>">Add to cart</a></p>
+      <%if(loggedIn){%>
+        <p><a href="/cart/add/<%=p.slug%>">Add to cart</a></p>
+      <%}else{%>
+        <p>You must be logged in to purchase items.</p>
+      <%}%>
     </div>
   </div>
 <% include _layouts/footer %>
